--- a/index.html
+++ b/index.html
@@ -1,20 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <p>Hello. Hottest welcome from kmr_Limon</p>
-  <img src="systematic.JPG" alt="" />
-
-<canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;">
-Your browser does not support the HTML canvas tag.</canvas>
-
-<script>
-var c = document.getElementById("myCanvas");
-var ctx = c.getContext("2d");
-ctx.moveTo(0,0);
-ctx.lineTo(200,100);
-ctx.stroke();
-</script>
-
+  <h1>Welcome to <b style="color:red">Nvier Exposed Code</b></h1>
 </body>
 </html>
 
