--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Nvier Exposed Code</title>
+    <link rel="icon" href="Photo.png" type="image/x-icon">
+  </head>
 <body>
   <h1>Welcome to <b style="color:red">Nvier Exposed Code</b></h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/PBZqMWMBLhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/avX495_y_28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/t2OxoR_wJ_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
 
