--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <link rel="icon" href="Photo.png" type="image/x-icon">
   </head>
 <body>
-  <h1>Welcome to <b style="color:red">Nvier Exposed Code</b></h1>
+  <h1>
+    <a href="https://nvier.netlify.app/"><img src="Photo.png" alt="Nvier Photo" style="width: 100px; height: 350px;display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;" id="logo"/></a>
+  Welcome to <b style="color:red">Nvier Exposed Code</b></h1>
+  <p>Here is some tutorial videos to assist you!</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/PBZqMWMBLhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/avX495_y_28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/t2OxoR_wJ_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
