--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   </head>
 <body>
   <h1>
-    <a href="https://nvier.netlify.app/"><img src="Photo.png" alt="Nvier Photo" style="width: 100px; height: 350px;display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;" id="logo"/></a>
+ <img src="Photo.png" height="40px" width="40px"/>
   Welcome to <b style="color:red">Nvier Exposed Code</b></h1>
   <p>Here is some tutorial videos to assist you!</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/PBZqMWMBLhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
