--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   </head>
 <body>
   <h1>
- <img src="Photo.png" height="40px" width="40px"/>
+ <img src="Multimedia/Photo.png" height="40px" width="40px"/>
   Welcome to <b style="color:red">Nvier Exposed Code</b></h1>
   <p>Here is some tutorial videos to assist you!</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/PBZqMWMBLhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/avX495_y_28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/t2OxoR_wJ_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <video src="Multimedia/CodingStatus.mp4" height="315" width="560" preload="none" controls></video>
 </body>
 </html>
 
