--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
   <head>
     <title>Nvier Exposed Code</title>
     <link rel="icon" href="Photo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
   </head>
 <body>
-  <h1>
- <img src="Multimedia/Photo.png" height="40px" width="40px"/>
-  Welcome to <b style="color:red">Nvier Exposed Code</b></h1>
-  <p>Here is some tutorial videos to assist you!</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/PBZqMWMBLhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/avX495_y_28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/t2OxoR_wJ_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <video src="Multimedia/CodingStatus.mp4" height="315" width="560" preload="none" controls></video>
-   <h1>Hi I am KAMRUZZAMAN LIMON</h1>
-   <H2>I am trying to code</H2>
-   <h3>I hope you are quit well</h3>
-   <h4>I am going to bed</h4>
+   <h1>Nvier</h1>
+   <hr />
+   <p class="intro">HI I'm KAMRUZZAMAN LIMON.I am interested in coding.</p>
+   <img src="images (6).jpeg" alt="image not showing" width="500px" height="240px"/>
+   <b><p>Now I am learning HTML,CSS, and JavaScript</p></b>
+   
 </body>
 </html>
 
