--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
    <h1>Nvier</h1>
    <hr />
    <p class="intro">HI I'm KAMRUZZAMAN LIMON.I am interested in coding.</p>
-   <img src="images (6).jpeg" alt="image not showing" width="500px" height="240px"/>
-   <b><p>Now I am learning HTML,CSS, and JavaScript</p></b>
-   
+     <b><p id="interested">Now I am learning HTML,CSS, and JavaScript</p></b>
 </body>
 </html>
 
