--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>xx142-b2.exe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="Fevicon.jpg">
+    <link rel="icon" href="Fevicon.png">
   </head>
 
   <body>
