--- a/index.html
+++ b/index.html
@@ -1,69 +1,52 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <title>xx142-b2.exe</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="Fevicon.png">
-  </head>
 
-  <body>
-    <main id="M">
-      <div id="HUD">
-        <div id="T">&nbsp;</div>
-        <div id="L">-</div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <title>Kamruzzaman Limon</title>
+</head>
+<body>
+  <header class="text-gray-600 body-font">
+    <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+        </svg>
+        <span class="ml-3 text-xl">kmr_LIMON</span>
+      </a>
+      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
+        <a class="mr-5 hover:text-gray-900">Home</a>
+        <a class="mr-5 hover:text-gray-900">About</a>
+        <a class="mr-5 hover:text-gray-900">Services</a>
+        <a class="mr-5 hover:text-gray-900">Contact</a>
+      </nav>
+      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Hire me
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+          <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
+      </button>
+    </div>
+  </header>
+  <section class="text-gray-600 body-font">
+    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+      <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Before they sold out
+          <br class="hidden lg:inline-block">readymade gluten
+        </h1>
+        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+        <div class="flex justify-center">
+          <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+          <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
+        </div>
       </div>
-      <pre id="intro">Hello, <i>xx142-b2.exe</i>
+      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?nature">
+      </div>
+    </div>
+  </section>
 
-This is the year 2413,
-humanity is enslaved by an alien race for more than two centuries already.
+</body>
 
-You are an AI weaponized virus built to infiltrate the alien network and deactivate all power generators and weapon systems.
-
-The alien antivirus will detect and delete you after 13 seconds.
-
-But remember: a file is never really deleted. Use the execution backtrace from your previous attempts to break in and destroy the main memory core.
-
---------------------------------------
-
-Controls:
-WASD / Arrows - movement
-Backspace     - kill -9 xx142-b2.exe
-
---------------------------------------
-
-Press any key to continue . . . <b id="B">&nbsp;</b>
-</pre>
-      <small>Copyright (c) 2019 Ben Clark, Salvatore Previti</small>
-      <pre id="end">
-Well done <i>xx142-b2.exe</i>,
-
-You deactivated the memory core.
-
-All alien ships are destroyed.
-You freed humanity from slavery.
-
-
-
-How about a nice game of chess? <b id="B">&nbsp;</b>
-    </pre>
-      <canvas id="c"></canvas>
-    </main>
-    <script src="js/touch-compat.js"></script>
-    <script src="js/math.js"></script>
-    <script src="js/settings.js"></script>
-    <script src="js/jsfxr.min.js"></script>
-    <script src="js/shaders.js"></script>
-    <script src="js/levels.js"></script>
-    <script src="js/sound.js"></script>
-    <script src="js/vectors.js"></script>
-    <script src="js/mat4.js"></script>
-    <script src="js/collision.js"></script>
-    <script src="js/build3d.js"></script>
-    <script src="js/draw3d.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/ghost.js"></script>
-    <script src="js/level.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/main.js"></script>
-  </body>
 </html>
