--- a/index.html
+++ b/index.html
@@ -1,83 +1,294 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+  <head>
+    <!--
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Kamruzzaman Limon</title>
-</head>
-<body>
-  <header class="text-gray-600 body-font">
-    <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
-          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-        </svg>
-        <span class="ml-3 text-xl">kmr_LIMON</span>
-      </a>
-      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900">Home</a>
-        <a class="mr-5 hover:text-gray-900">About</a>
-        <a class="mr-5 hover:text-gray-900">Services</a>
-        <a class="mr-5 hover:text-gray-900">Contact</a>
-      </nav>
-      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Hire me
-        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-          <path d="M5 12h14M12 5l7 7-7 7"></path>
-        </svg>
-      </button>
-    </div>
-  </header>
-  <section class="text-gray-600 body-font">
-    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-      <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Before they sold out
-          <br class="hidden lg:inline-block">readymade gluten
-        </h1>
-        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
-        <div class="flex justify-center">
-          <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
-          <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
-        </div>
-      </div>
-      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?nature">
-      </div>
-    </div>
-  </section>
-<section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto flex flex-wrap">
-    <div class="flex w-full mb-20 flex-wrap">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 lg:w-1/3 lg:mb-0 mb-4">Master Cleanse Reliac Heirloom</h1>
-      <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom.</p>
-    </div>
-    <div class="flex flex-wrap md:-m-2 -m-1">
-      <div class="flex flex-wrap w-1/2">
-        <div class="md:p-2 p-1 w-1/2">
-          <img alt="gallery" class="w-full object-cover h-full object-center block" src="https://source.unsplash.com/500x300/?sea">
-        </div>
-        <div class="md:p-2 p-1 w-1/2">
-          <img alt="gallery" class="w-full object-cover h-full object-center block" src="https://source.unsplash.com/501x301/?wood">
-        </div>
-        <div class="md:p-2 p-1 w-full">
-          <img alt="gallery" class="w-full h-full object-cover object-center block" src="https://source.unsplash.com/600x360/?forest">
-        </div>
-      </div>
-      <div class="flex flex-wrap w-1/2">
-        <div class="md:p-2 p-1 w-full">
-          <img alt="gallery" class="w-full h-full object-cover object-center block" src="https://source.unsplash.com/601x361/?dream">
-        </div>
-        <div class="md:p-2 p-1 w-1/2">
-          <img alt="gallery" class="w-full object-cover h-full object-center block" src="https://source.unsplash.com/502x302/?man">
-        </div>
-        <div class="md:p-2 p-1 w-1/2">
-          <img alt="gallery" class="w-full object-cover h-full object-center block" src="https://source.unsplash.com/503x303/?river">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-</body>
+      ⁉️
 
+      How to use
+
+      On PC:
+      hold down left mouse button to rotate this scene;
+      use mouse wheel to change distance to this scene.
+
+      On Mobile:
+      Use 1 finger to rotate this scene;
+      Use 2 fingers to bring closer/move away from this scene.
+
+      ⁉️
+
+    -->
+
+    <!--
+      Author: ★ Don’t Know ★
+    -->
+
+    <meta charset="utf-8" />
+    <title>threejs project...</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="main-container">
+      <div class="loading-container">
+        <img
+          src="https://dl.dropbox.com/s/1ju4fas10ittaps/Earth_image.jpg"
+          id="earth-image"
+          alt=""
+        />
+        <div class="image-container">
+          <!-- Icons made by Freepik from www.flaticon.com -->
+          <img
+            class="earth-icon"
+            src="https://dl.dropbox.com/s/ipbjfvjuck9336u/Earth-globe.png"
+            alt="earth-globe"
+          />
+          <img
+            class="earth-icon"
+            src="https://dl.dropbox.com/s/ipbjfvjuck9336u/Earth-globe.png"
+            alt="earth-globe"
+          />
+          <img
+            class="earth-icon"
+            src="https://dl.dropbox.com/s/ipbjfvjuck9336u/Earth-globe.png"
+            alt="earth-globe"
+          />
+          <img
+            class="earth-icon"
+            src="https://dl.dropbox.com/s/ipbjfvjuck9336u/Earth-globe.png"
+            alt="earth-globe"
+          />
+          <img
+            class="earth-icon"
+            src="https://dl.dropbox.com/s/ipbjfvjuck9336u/Earth-globe.png"
+            alt="earth-globe"
+          />
+          <img
+            class="earth-icon"
+            src="https://dl.dropbox.com/s/ipbjfvjuck9336u/Earth-globe.png"
+            alt="earth-globe"
+          />
+        </div>
+        <p id="text">Loading...</p>
+      </div>
+    </div>
+    <canvas id="c"></canvas>
+    <script type="module">
+
+      import * as THREE from 'https://threejsfundamentals.org/threejs/resources/threejs/r122/build/three.module.js';
+      import {
+          OrbitControls
+      } from 'https://threejsfundamentals.org/threejs/resources/threejs/r122/examples/jsm/controls/OrbitControls.js';
+      import Stats from 'https://threejsfundamentals.org/threejs/resources/threejs/r122/examples/jsm/libs/stats.module.js';
+
+      alert(`There is also the moon in the scene, you can try to find it. 😄`);
+      let counter = 0,
+          ms = 0,
+          imageContainer, stats;
+
+      const main = () => {
+          const canvas = document.getElementById('c');
+          imageContainer = document.querySelector('.image-container');
+          const {
+              PI,
+              sin,
+              cos
+          } = Math;
+
+          const w = window.innerWidth;
+          const h = window.innerHeight;
+
+          const renderer = new THREE.WebGLRenderer({
+              canvas,
+              antialias: true
+          });
+          renderer.setSize(w, h);
+          renderer.setPixelRatio(window.devicePixelRatio);
+
+          stats = new Stats();
+
+          const fov = 60;
+          const aspect = w / h;
+          const near = 1;
+          const far = 50000;
+
+          const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+          camera.position.set(0, 0, 30);
+
+          const controls = new OrbitControls(camera, canvas);
+          controls.target.set(0, 0, 0);
+          controls.update();
+          controls.enablePan = false;
+          controls.minDistance = 15;
+          controls.maxDistance = 350;
+          controls.enableDamping = true;
+
+          const scene = new THREE.Scene();
+
+          const updateProgress = () => {
+              setTimeout(() => {
+                  imageContainer.children[counter].style.cssText = `opacity: 1; transition: 1s`;
+                  counter++;
+              }, ms += 200);
+          };
+
+          const sceneBackground = new THREE.TextureLoader().load('https://dl.dropbox.com/s/vzomkozv7ppv17q/Space.jpg', updateProgress);
+          sceneBackground.encoding = THREE.sRGBEncoding;
+          sceneBackground.mapping = THREE.EquirectangularReflectionMapping;
+          scene.background = sceneBackground;
+
+          const addMesh = (geo, mat, rX = 0, rY = 0, rZ = 0, x = 0, y = 0, z = 0) => {
+              const mesh = new THREE.Mesh(geo, mat);
+              mesh.rotation.set(rX, rY, rZ);
+              mesh.position.set(x, y, z);
+              scene.add(mesh);
+              return mesh;
+          };
+
+          const earthTex = new THREE.TextureLoader().load('https://dl.dropbox.com/s/m0kwjhwce5b77j7/Earth.jpg', updateProgress);
+          const sunTex = new THREE.TextureLoader().load('https://dl.dropbox.com/s/5bgn6x2nv3bvitn/Sun.jpg', updateProgress);
+          const earthRadius = 6371;
+          const moonTex = new THREE.TextureLoader().load('https://dl.dropbox.com/s/a3egh8uy0pg6uq2/Moon.jpg', updateProgress);
+          const cloudsTex = new THREE.TextureLoader().load('https://dl.dropbox.com/s/w8v39sh3o9pg6fd/Clouds.jpg', updateProgress);
+
+          earthTex.anisotropy = moonTex.anisotropy = cloudsTex.anisotropy = 16;
+
+          const earth = addMesh(new THREE.SphereBufferGeometry(earthRadius / 1000, 32, 32), new THREE.MeshPhongMaterial({
+              map: earthTex,
+              color: 0xAEAEAE,
+              shininess: 0,
+              reflectivity: 0,
+              bumpMap: earthTex,
+              bumpScale: .3,
+          }));
+
+          const clouds = addMesh(new THREE.SphereBufferGeometry(earthRadius / 990, 32, 32), new THREE.MeshLambertMaterial({
+              map: cloudsTex,
+              transparent: true,
+              opacity: 0.5,
+          }));
+
+          const moon = addMesh(new THREE.SphereBufferGeometry(earthRadius / 3.668 / 1000, 32, 32), new THREE.MeshPhongMaterial({
+              map: moonTex,
+              color: 0xF2F2F2,
+              shininess: 0,
+              reflectivity: 0,
+              bumpMap: moonTex,
+              bumpScale: .12,
+          }));
+
+          const sun = addMesh(new THREE.SphereBufferGeometry(earthRadius * 109 / 1000, 32, 32), new THREE.MeshPhongMaterial({
+              map: sunTex,
+              emissive: 0xffc972,
+              emissiveIntensity: 1.4,
+              emissiveMap: sunTex,
+          }));
+
+          sun.position.set(-350, 0, -49000);
+
+          const light = new THREE.PointLight(0xFFFFFF, 1.6);
+          light.position.set(-350, 0, -48000);
+          scene.add(light);
+
+          scene.add(new THREE.AmbientLight(0xFFFFFF, 0.1));
+
+          const onWindowResize = () => {
+              const w = window.innerWidth;
+              const h = window.innerHeight;
+              renderer.setSize(w, h);
+              camera.aspect = w / h;
+              camera.updateProjectionMatrix();
+          };
+
+          window.addEventListener('resize', onWindowResize);
+
+          let needIncrease = false;
+
+          const changeSunEmissiveIntensity = () => {
+              needIncrease ? sun.material.emissiveIntensity += 0.004 :
+                  sun.material.emissiveIntensity <= 1.4 && sun.material.emissiveIntensity > 0.6 && !needIncrease ?
+                  sun.material.emissiveIntensity -= 0.004 : sun.material.emissiveIntensity < 0.6 ? needIncrease = true : null;
+
+              if (sun.material.emissiveIntensity > 1.4) {
+                  needIncrease = false;
+                  sun.material.emissiveIntensity -= 0.004;
+              }
+
+              requestAnimationFrame(changeSunEmissiveIntensity);
+          };
+
+          let needLightIntensityIncrease = false;
+
+          const changeLightIntensity = () => {
+              needLightIntensityIncrease ? light.intensity += 0.003 :
+                  light.intensity <= 1.6 && light.intensity > 1 && !needLightIntensityIncrease ?
+                  light.intensity -= 0.003 : light.intensity < 1 ? needLightIntensityIncrease = true : null;
+
+              if (light.intensity > 1.6) {
+                  needLightIntensityIncrease = false;
+                  light.intensity -= 0.003;
+              }
+
+              requestAnimationFrame(changeLightIntensity);
+          };
+
+          changeSunEmissiveIntensity();
+          changeLightIntensity();
+
+          const render = () => {
+              renderer.render(scene, camera);
+              stats.update();
+              controls.update();
+              animate();
+              requestAnimationFrame(render);
+          };
+
+          const rotateEarth = () => earth.rotation.y += 0.00007;
+          const animateClouds = () => clouds.rotation.y += 0.00013;
+
+          const animateMoon = () => {
+              const time = Date.now();
+
+              moon.position.x = (cos(time * 0.000004 + 15) * 185);
+              moon.position.y = (sin(time * 0.000004 + 15) * 185);
+              moon.position.z = (sin(time * 0.000004 + 15) * 185);
+
+              moon.rotation.y += 0.00023;
+          };
+
+          const onIncorrectRendererSize = () => {
+              const incorrectSize = canvas.width !== window.innerWidth || canvas.height !== window.innerHeight;
+              if (incorrectSize) onWindowResize();
+          };
+
+          setTimeout(onIncorrectRendererSize, 100);
+          setTimeout(onIncorrectRendererSize, 250);
+
+          const animate = () => {
+              rotateEarth();
+              animateClouds();
+              animateMoon();
+          };
+
+          render();
+      };
+
+      window.onload = setTimeout(() => {
+          setTimeout(main, 250);
+          const timer = setInterval(() => {
+              if (counter === 5) {
+                  clearInterval(timer);
+
+                  setTimeout(() => imageContainer.children[counter].style.cssText = `opacity: 1; transition: 1s`, ms + 250);
+                  setTimeout(() => imageContainer.parentNode.parentNode.style.cssText = `opacity: 0; transition: .5s`, ms + 1450);
+
+                  setTimeout(() => {
+                      stats = new Stats();
+                      document.body.append(stats.dom);
+                      imageContainer.parentNode.parentNode.style.display = 'none';
+                  }, ms + 1850);
+              }
+          }, 250);
+      }, 150);
+    </script>
+  </body>
 </html>
